--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14267,7 +14267,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[14-9]|SH-M1[1-6](?:-y)?|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[125]|02)|[34]04SH|401SH|[45]02SH|306SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL2[25]|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|403SH|603SH|SHF3[134]|SHV4[035][-_]u|SW001SH|SHG0[123]|X4-SH|A002SH|SH-A01|DM-01J|SH-D01|A001SH|606SH|FS801[56]|d-41A|NP80[56]SH)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[14-9]|SH-M1[1-6](?:-y)?|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[125]|02)|[34]04SH|401SH|[45]02SH|306SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL2[25]|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|403SH|603SH|SHF3[134]|SHV4[035][-_]u|SW001SH|SHG0[123]|X4-SH|A002SH|SH-A01|DM-01J|SH-D01|A001SH|606SH|FS801[56]|d-41A|NP80[56]SH|NP501SH)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -14407,6 +14407,8 @@ Sharp:
       model: 'Simple Sumaho 5'  # (Simple Smartphone 5)
     - regex: 'NP80[56]SH'
       model: 'Aquos Keitai 3'
+    - regex: 'NP501SH'
+      model: 'Aquos Keitai'
 
     # explicit tablet models
     - regex: 'SH-08E(?:[);/ ]|$)'
@@ -20747,6 +20749,12 @@ Wintouch:
   regex: 'Q93S'
   device: 'tablet'
   model: 'Q93S'
+
+# Aiuto
+Aiuto:
+  regex: '(AT702)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
 
 # Yoka TV
 'Yoka TV':
