--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3293,3 +3293,21 @@
     model: Glow 9.7"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.0.4; RMD-757 Build/IMM76D) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/27.0.1453.90 Safari/537.36
+  os:
+    name: Android
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 27.0.1453.90
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Ritmix
+    model: RMD-757
+  os_family: Android
+  browser_family: Chrome
