--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2093,8 +2093,8 @@
     type: browser
     name: Aloha Browser Lite
     version: "1.4.0.1"
-    engine: WebKit
-    engine_version: "537.36"
+    engine: Blink
+    engine_version: ""
 - 
   user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/536.11 (KHTML, like Gecko) Chrome/20.0.1132.11 TaoBrowser/3.1 Safari/536.11
   client:
